Bug 59247. Make directory service providers threadsafe. r=valeski, sr=jband.